<resources>
    <string name="app_name">宝贝上学</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="route">已开通路线</string>
    <string name="route_coming">即将开通</string>
    <string name="new_route">开启新路线</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_introduction">IntroductionActivity</string>
    <string name="start_app">开启旅程</string>
    <string name="intro_descp2">   实时状态 </string>
    <string name="intro_descp1">路线</string>
    <string name="intro_descp1_1">高效安全</string>
    <string name="title_activity_available_route">AvailableRouteActivity</string>

    <string name="settings">设置(尚未开通)</string>
    <string name="info_center">消息中心</string>
    <string name="child_info">宝贝信息(尚未开通)</string>
    <string name="booked_schoolbus">我的校车</string>
    <string name="my_order">我的订单(尚未开通)</string>
    <string name="more">更多</string>
    <string name="log_out">退出登录</string>
    <string name="log_in">登录</string>
    <string name="Message_Center_Title">消息中心</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_message_center">MessageCenterActivity</string>
    <string name="title_activity_route_detail">RouteDetailActivity</string>
    <string name="ticket_info">购票须知</string>
    <string name="register_info">报名须知</string>
    <color name="green_bg">#2c6a2c</color>
    <color name="gray_bg">#c3c8c5</color>
    <color name="white_bg">#ffffff</color>
    <string name="route_info">班车信息</string>
    <string name="route_bus_number">班车编号</string>
    <string name="route_bus_plate">车牌号</string>
    <string name="route_mileage">班车里程</string>
    <string name="route_assistant">班车助教信息</string>
    <string name="route_price">票价</string>
    <string name="route_ticket_left">当月余票</string>
    <string name="route_group_chat">班线群聊</string>
    <string name="route_join_group_chat">立即加入</string>
    <string name="route_stop_info">途径站点</string>
    <string name="title_activity_new_route">NewRoute</string>
    <string name="title_activity_coming_route">ComingRouteActivity</string>
    <string name="text_content">1.该原型主要体现系统结构，设计逻辑，不支持横屏\n\n2.实际App1.0版完成主体功能，包括基于大数据的路径分析，App界面。辅助功能完成50%。目前只支持安卓系统\n\n3.由于网络环境的原因，若加载缓慢，请耐心等待</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_realtime">RealtimeActivity</string>
    <string name="title_activity_comming_route">CommingRouteActivity</string>
    <string name="title_activity_choose_poi">ChoosePoiActivity</string>
    <string name="intro_descp2_1">车辆位置 车内视频</string>

</resources>
