<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro2"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/intro_descp2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#793311"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:text="@string/intro_descp2_1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#793311"
        android:textSize="32sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#209981"
        android:enabled="true"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/start_app"
        android:textSize="32dp"
        android:layout_marginBottom="77dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="36dp"
        android:layout_height="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@drawable/forground_bg" />

        <TextView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/background_bg" />

    </LinearLayout>
</RelativeLayout>